Full revized